# ticketing-platform-desktop

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_catalog.sql  0003_user_types.sql  0004_sync_outbox.sql
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: category_commands.rs  mod.rs  ticket_commands.rs  unit_commands.rs  user_type_commands.rs
src-tauri/src/db/: mod.rs
src-tauri/src/domain/: category.rs  mod.rs  pagination.rs  ticket.rs  unit.rs  user_type.rs
src-tauri/src/repository/: category_repository.rs  mod.rs  ticket_repository.rs  unit_repository.rs  user_type_repository.rs
src-tauri/src/service/: category_service.rs  mod.rs  ticket_service.rs  unit_service.rs  user_type_service.rs
src-tauri/src/sync/: client.rs  identity.rs  mod.rs  nightly.rs  outbox.rs  worker.rs
src/api/: tickets.ts
src/lib/: invoke.ts  types.ts
