[package]
name = "ticketing-platform-desktop"
version = "0.1.0"
description = "Offline-first ticketing & invoicing desktop app."
authors = ["Eminence Technology"]
edition = "2021"
rust-version = "1.77"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "ticketing_platform_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Local database — embedded SQLite via sqlx, migration-driven.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# IDs, time, typed errors.
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# Default release config: strip the extra console window on Windows.
default = []

[profile.release]
# Smaller, faster release binaries for distribution.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
